fix: bring back chaptes with series endpoint
